# p2m

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
p2m/: annotation.py  data_download.py  main.py  query.py  utils.py
resources/: substructure_expansion.ipynb
src/p2m/: __init__.py  main.py  query.py
