[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "p2m"
version = "0.1.0"
authors = [
  { name="Pacific Northwest National Laboratory" }
]
maintainers = [
  { name="Christine Chang", email="christine.chang@pnnl.gov" }
]
description = "Identify metabolites associated with a list of protein identifiers"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/pnnl/p2m"
"Bug Tracker" = "https://github.com/pnnl/p2m/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
p2m = "p2m.main:main"